# libcfunk

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  GNUmakefile  clang-format.sh  config.h.cmake
cmake/: _Alignas.cmake  _Alignof.cmake  _Exit.cmake  _Noreturn.cmake  __builtin_expect.cmake  __fbufsize.cmake  __flbf.cmake  __fpending.cmake  __fpurge.cmake  __freadable.cmake  __freading.cmake  __fseterr.cmake  __func__.cmake  __fwritable.cmake  __fwriting.cmake  a64l.cmake  abs.cmake  accept.cmake  access.cmake  alignas.cmake  aligned_alloc.cmake  alignof.cmake  alloca-h.cmake  alphasort.cmake  ar-h.cmake  arc4.cmake  argz-h.cmake  argz_add.cmake  argz_append.cmake  argz_count.cmake  argz_create.cmake  argz_extract.cmake  argz_next.cmake  argz_stringify.cmake  arpa-inet-h.cmake  asprintf.cmake  assert-h.cmake  atexit.cmake  atof.cmake  atoi.cmake  (+1218 more)
doc/: MACROS  OPEN-STD  POSIX  UNICODE  WINDOWS
lib/: CMakeLists.txt  _Alignas.h  _Alignof.h  _Exit.c  _Noreturn.h  __builtin_expect.h  __fbufsize.c  __flbf.c  __fpending.c  __fpurge.c  __freadable.c  __freading.c  __fseterr.c  __func__.h  __fwritable.c  __fwriting.c  __has_attribute.h  __has_builtin.h  __has_c_attribute.h  __has_cpp_attribute.h  __has_declspec_attribute.h  __has_extension.h  __has_feature.h  __has_include.h  __has_include_next.h  __has_warning.h  __is_identifier.h  a64l.c  abs.c  accept.c  access.c  alignas.h  alignof.h  alphasort.c  arc4.c  arc4.h  argz.c  argz_add.c  argz_append.c  argz_count.c  (+523 more)
lib/compat/: README  alloca.h.in  ar.h.in  argz.h.in  assert.h.in  byteswap.h.in  cpio.h.in  ctype.h.in  dirent.h.in  endian.h.in  err.h.in  errno.h.in  error.h.in  fcntl.h.in  fenv.h.in  float.h.in  fmtmsg.h.in  fnmatch.h.in  ftw.h.in  getopt.h.in  glob.h.in  grp.h.in  iconv.h.in  inttypes.h.in  langinfo.h.in  libgen.h.in  limits.h.in  locale.h.in  malloc.h.in  math.h.in  monetary.h.in  netdb.h.in  poll.h.in  pthread.h.in  pty.h.in  pwd.h.in  sched.h.in  search.h.in  semaphore.h.in  signal.h.in  (+29 more)
lib/compat/arpa/: inet.h.in
lib/compat/net/: if.h.in
lib/compat/netinet/: in.h.in
lib/compat/sys/: endian.h.in  file.h.in  ioctl.h.in  mman.h.in  msg.h.in  random.h.in  resource.h.in  select.h.in  sem.h.in  shm.h.in  socket.h.in  stat.h.in  statvfs.h.in  time.h.in  timeb.h.in  times.h.in  types.h.in  uio.h.in  un.h.in  utsname.h.in  wait.h.in
scripts/: cmake-autoheader.pl  cmake-cache.py  cppnames.py  list-have-vars.pl  substitute-header.pl  verify-config-h-included.pl
tests/: CMakeLists.txt  test-_Alignas.c  test-_Alignof.c  test-_Exit.c  test-_Noreturn.c  test-__builtin_expect.c  test-__fbufsize.c  test-__flbf.c  test-__fpending.c  test-__fpurge.c  test-__freadable.c  test-__freading.c  test-__fseterr.c  test-__func__.c  test-__fwritable.c  test-__fwriting.c  test-a64l.c  test-abs.c  test-accept.c  test-access.c  test-alignas.c  test-alignof.c  test-alloca-h.c  test-alloca.c  test-alphasort.c  test-ar-h.c  test-arc4.c  test-argz-h.c  test-argz_add.c  test-argz_append.c  test-argz_count.c  test-argz_create.c  test-argz_extract.c  test-argz_next.c  test-argz_stringify.c  test-arpa-inet-h.c  test-assert-c11.c  test-assert-c23.c  test-assert-h.c  test-atexit.c  (+497 more)
toolchains/: README  i686-linux-gnu.cmake  i686-w64-mingw32.cmake  mips-linux-gnu.cmake  x86_64-w64-mingw32.cmake
tools/: cmake-vars.pl  cmake-vars.py  get-includes.pl  get-includes.py
